[project]
name = "get-line"
description = "A ComfyUI custom node used to get one line of string from a multi line string. Search in the manager for `get line`, or `getline` or `get-line`."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Sean-Bradley/ComfyUI-Get-Line"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Sean-Bradley/ComfyUI-Get-Line/wiki"
"Bug Tracker" = "https://github.com/Sean-Bradley/ComfyUI-Get-Line/issues"

[tool.comfy]
PublisherId = "sbcode"
DisplayName = "ComfyUI Get Line"
Icon = "https://avatars.githubusercontent.com/u/59069470"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility